--- a/profile.html
+++ b/profile.html
@@ -17,7 +17,7 @@
     
     <title>Tweeter | JoelFernando209's Profile</title>
   </head>
-  <body>
+  <body class='body'>
     <div class='dashboard'>
       <header class='header dashboard__header'>
         <a class='logo header__logo' href='http://localhost:8080/dashboard.html'>
